メール本文修正

--- a/app/views/transfer_mailer/transfer_mail.html.erb
+++ b/app/views/transfer_mailer/transfer_mail.html.erb
@@ -1,3 +1,2 @@
-<h1>TRANSFER OF OWNERSHIP</h1>
+<h1>YOU ARE THE OWNER</h1>
 <p>TEAM: <%= @team.name %></p>
-<p>NEW OWNER: <%= @team.owner.email %></p>
