--- a/app/views/shared/layout/_sidebar.html.erb
+++ b/app/views/shared/layout/_sidebar.html.erb
@@ -3,6 +3,8 @@
   <%= link_to dashboard_url, class: 'brand-link' do %>
     <span class="brand-text font-weight-light">DIVE INTO POST</span>
   <% end %>
+  <%= current_user.current_sign_in_at if user_signed_in? %>
+  <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
 
   <!-- Sidebar -->
   <div class="sidebar">
